fix history text too large

--- a/src/pages/History/index.scss
+++ b/src/pages/History/index.scss
@@ -140,7 +140,7 @@
     font-size: r(11);
     color: $grey;
     .history-data-middle-current {
-      font-size: r(36);
+      font-size: 0.07rem;
       font-weight: bold;
     }
 
